--- a/src/ui-kit/selectBox/selectBox.module.scss
+++ b/src/ui-kit/selectBox/selectBox.module.scss
@@ -1,24 +1,39 @@
 .selectBox {
   position: relative;
   width: 300px;
-  font-family: Arial, sans-serif;
   &Control {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 0 12px 0 0;
+    color: #000;
+    background-color: #fff;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 12px;
+    height: 40px;
+    overflow: hidden;
     cursor: pointer;
-    &:focus {
-      outline: 2px solid #005fcc;
+    width: 100%;
+    transition: 0.5s all;
+    outline: 2px solid transparent;
+    &:focus-within {
+      outline: 2px solid #2d57ff;
+      box-shadow: 0 0 0 6px  #2d57ff3e;
+      }
+      & input {
+        color: #000;
+        border-radius: 8px;
+      }
     }
-  }
+  
   &Placeholder {
-    color: #888;
+    color: #232323;
+    padding-left: 1rem;
+    white-space: nowrap;
   }
   &Arrow {
-    font-size: 12px;
+    font-size: 16px;
+    font-weight: bold;
   }
   &Menu {
     position: absolute;
@@ -26,40 +41,52 @@
     left: 0;
     right: 0;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 12px;
     background-color: white;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     z-index: 10;
+    padding: 8px;
   }
   &Search {
     width: 100%;
-    padding: 10px;
+    padding: 12px;
     background: transparent;
     border: none;
+    cursor: pointer;
     border-bottom: none;
     outline: none;
   }
   &List {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 5px auto;
     max-height: 150px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
     overflow-y: auto;
   }
   &Option {
-    padding: 10px;
+    padding: 8px;
+    background-color: transparent;
+    width: 100%;
+    color: #000;
     cursor: pointer;
+    transition: 0.5s all;
+    border: none;
+    text-align: left;
+    outline: none !important;
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    justify-content: space-between;
     &:hover {
-      background-color: #f0f0f0;
+      color: #2d57ff;
+      background-color: #cfdaff6f;
     }
   }
   &Tick {
-    float: right;
-    color: green;
+    color: #2d57ff;
     font-weight: bold;
   }
 }
-
-
-
-
